# ZHMModSDK

./: .gitmodules  CMakeLists.txt  CMakePresets.json  build-linux.sh  mingw-toolchain.cmake  vcpkg.json
Mods/AdvancedRating/Src/: AdvancedRating.cpp  AdvancedRating.h
Mods/CertPinBypass/Src/: CertPinBypass.cpp  CertPinBypass.h
Mods/CodeGen/Src/: CodeGen.cpp  CodeGen.h
Mods/DebugMod/Src/: DebugMod.cpp  DebugMod.h
Mods/DiscordRichPresence/: CMakeLists.txt
Mods/DiscordRichPresence/Src/: DiscordRichPresence.cpp  DiscordRichPresence.h
Mods/FreeCam/Src/: FreeCam.cpp  FreeCam.h
Mods/MaxPatchLevel/Src/: MaxPatchLevel.cpp  MaxPatchLevel.h
Mods/NoPause/Src/: NoPause.cpp  NoPause.h
Mods/SkipIntro/Src/: SkipIntro.cpp  SkipIntro.h
Mods/WakingUpNpcs/Src/: WakingUpNpcs.cpp  WakingUpNpcs.h
ZHMModSDK/: CMakeLists.txt  ZHMModSDKConfig.cmake.in
ZHMModSDK/Include/: EventDispatcher.h  Hook.h
ZHMModSDK/Include/Glacier/: ZActor.h  ZBuffer.h  ZCollision.h  ZEntity.h  ZGameLoopManager.h  ZHitman5.h  ZInput.h  ZMath.h  ZObject.h  ZPhysics.h  ZResource.h  ZSetpieceEntity.h  ZSpatialEntity.h  ZString.h
ZHMModSDK/Include/ZHMModSDK/: EventDispatcher.h  Events.h  Functions.h  Globals.h  Hook.h  Hooks.h  IModSDK.h  IPluginInterface.h  Logging.h
ZHMModSDK/Src/: DebugConsole.cpp  EngineFunctionImpl.h  EventDispatcherImpl.h  Events.cpp  Functions.cpp  Globals.cpp  GlobalsImpl.h  HookImpl.h  Hooks.cpp  Logging.cpp  Main.cpp  ModLoader.cpp  ModLoader.h  ModSDK.cpp  ModSDK.h
ZHMModSDK/Src/Glacier/: ZString.cpp
ZHMModSDK/Src/Rendering/: D3D12Hooks.cpp  D3D12Hooks.h
ZHMModSDK/Src/Rendering/Renderers/: DirectXTKRenderer.cpp  DirectXTKRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h
ZHMModSDK/Src/UI/: Console.cpp  ModSelector.cpp  ModSelector.h
ZHMModSDK/Src/Util/: ProcessUtils.cpp  StringUtils.cpp
_inc/: AudioSessionTypes.h  Audioclient.h  TlHelp32.h  Windows.h  Xinput.h  x3daudioredist.h  xapofxredist.h  xaudio2fxredist.h  xaudio2redist.h
patches/: apply.sh  directxtk12-ignore-shader-errors.patch  directxtk12-wine-ignore-errors.patch  directxtk12-wine.patch  imgui-dx12-mingw.patch  vcpkg-patch-support-linux.patch
